# em_challenge

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: modeling.ipynb  notebook.ipynb  results.ipynb  signal.ipynb
src/: baseline.py  main.py
